--- a/Castle/templates/sellers/seller_info.html
+++ b/Castle/templates/sellers/seller_info.html
@@ -6,9 +6,9 @@
     </div>
     <div class="w-100 px-3 pb-3">
         <div class="gray-background border-shadow w-100">
-            <div class="row" style="margin:auto !important">
+            <div class="row marginauto">
                 <div class="col-2"><h4 class="prev_arrow"><</h4></div>
-                <div class="col-8" style="text-align:center"><h5>{{ seller.user.user_info.name }}'s apartments</h5></div>
+                <div class="col-8 textcenter"><h5>{{ seller.user.user_info.name }}'s apartments</h5></div>
                 <div class="col-2"><h4 class="next_arrow text-right">></h4></div>
             </div>
             <div class="new_aparts-container container px-0 m-0">
