--- a/Castle/templates/users/seller_profile.html
+++ b/Castle/templates/users/seller_profile.html
@@ -7,15 +7,15 @@
         <div class="card border-shadow bg-white">
             <div class="card-body">
                 <!-- image -->
-                <div class="col-md-4 col-lg-4 col-12" id="editProfilePicture" style="float:left;text-align:center">
+                <div class="col-md-4 col-lg-4 col-12 floatleft textcenter" id="editProfilePicture">
                     <div class="avatar-container">
-                        {% if user.seller.logo%}
-                           <img class="profile-picture" style="width: 100%;" alt="User avatar" src="{{ user.seller.logo}}">
+                        {% if user.seller.logo %}
+                           <img class="profile-picture width100" alt="User avatar" src="{{ user.seller.logo}}">
                          <div class="middle">
                             <div class="text" onclick="window.location.href='/users/change_image'">Edit <i class="fas fa-pencil-alt"></i></div>
                         </div>
                         {% else %}
-                           <img class="profile-picture" style="width: 100%;" src="/static/images/userimagenotfound.jpg">
+                           <img class="profile-picture width100" src="/static/images/userimagenotfound.jpg">
                          <div class="middle">
                             <div class="text" onclick="window.location.href='/users/change_image'">Edit <i class="fas fa-pencil-alt"></i></div>
                         </div>
@@ -23,13 +23,13 @@
                     </div>
                 </div>
                 <!-- / image -->
-                <a class="profile-info col-md-8 col-lg-8 col-12" style="float:right;text-align:center">
+                <a class="profile-info col-md-8 col-lg-8 col-12 textcenter floatright">
                     <h3>{{ user.username }}</h3>
-                    <h5>Name: <span style="font-weight:normal">{{ info.name }}</span></h5>
-                    <h5>Phone: <span style="font-weight:normal">{{ info.phone }}</span></h5>
-                    <h5>E-mail: <span style="font-weight:normal">{{ info.email }}</span></h5>
+                    <h5>Name: <span class="font-weight-normal">{{ info.name }}</span></h5>
+                    <h5>Phone: <span class="font-weight-normal">{{ info.phone }}</span></h5>
+                    <h5>E-mail: <span class="font-weight-normal">{{ info.email }}</span></h5>
                     {% if user.seller.address and user.seller.zip_code %}
-                        <h5>Address: <span style="font-weight:normal">{{ user.seller.address }}, {{ user.seller.zip_code }}</span></h5>
+                        <h5>Address: <span class="font-weight-normal">{{ user.seller.address }}, {{ user.seller.zip_code }}</span></h5>
                     {% elif user.seller.address %}
                         <h5>Address: {{ user.seller.address }}</h5>
                     {% else %}
@@ -64,7 +64,7 @@
                 <p>Total sales amount: <strong>{{ money | dotSeperator }} ISK</strong></p>
             </div>
             <div class="col-4 text-right pb-2">
-                <a href="{% url 'add_apartment' %}"><button id="new_apartment" type="submit" class="btn green-button" style="width: fit-content">Add new apartment</button></a>
+                <a href="{% url 'add_apartment' %}"><button id="new_apartment" type="submit" class="btn green-button fit-content">Add new apartment</button></a>
             </div>
         </div>
     </div>
@@ -73,9 +73,9 @@
      <!-- apartments for sale -->
      <div class="w-100 px-3 pb-3">
         <div class="gray-background border-shadow w-100">
-            <div class="row" style="margin:auto !important">
+            <div class="row marginauto">
                 <div class="col-2"><h4 class="prev_arrow"><</h4></div>
-                <div class="col-8" style="text-align:center"><h5>{{ seller.user.user_info.name }}'s apartments for sale</h5></div>
+                <div class="col-8 textcenter"><h5>{{ seller.user.user_info.name }}'s apartments for sale</h5></div>
                 <div class="col-2 next-container"><h4 class="next_arrow text-right">></h4></div>
             </div>
             <div class="new_aparts-container container px-0 m-0">
@@ -92,9 +92,9 @@
     <!-- apartments sold -->
      <div class="w-100 px-3 pb-3">
         <div class="gray-background border-shadow w-100">
-            <div class="row" style="margin:auto !important">
+            <div class="row marginauto">
                 <div class="col-2"><h4 class="prev_arrow2"><</h4></div>
-                <div class="col-8" style="text-align:center"><h5>{{ seller.user.user_info.name }}'s apartments sold</h5></div>
+                <div class="col-8 textcenter"><h5>{{ seller.user.user_info.name }}'s apartments sold</h5></div>
                 <div class="col-2 next-container"><h4 class="next_arrow2">></h4></div>
             </div>
             <div class="new_aparts-container container px-0 m-0">
