--- a/Castle/templates/users/reset_password_done.html
+++ b/Castle/templates/users/reset_password_done.html
@@ -6,7 +6,7 @@
         <div class="col-sm-5 col-centered login-column red-background border-shadow">
             <div class="card border-shadow">
                 <div class="card-body">
-                    <h5 style="color:#5F1C1C; margin-bottom:2%;">Check your spam folder!</h5>
+                    <h5 class="checkspam">Check your spam folder!</h5>
                     <p>
                     We've emailed you instructions for setting your password, if an account exists with the email you entered.
                     You should receive them shortly.
