--- a/Castle/templates/apartments/buy_review.html
+++ b/Castle/templates/apartments/buy_review.html
@@ -64,7 +64,7 @@
                     <!-- form for buying the apartment and ending the process -->
                     <form method="POST" class="float-right">
                         {% csrf_token %}
-                        <button type="submit" class="btn green-button" style="width: fit-content">Buy this apartment</button>
+                        <button type="submit" class="btn green-button fit-content">Buy this apartment</button>
                     </form>
                     <!-- / form -->
                 </div>
