--- a/Castle/templates/apartments/buy_success.html
+++ b/Castle/templates/apartments/buy_success.html
@@ -25,7 +25,7 @@
                         </div>
                     </div>
                     <a href="{% url 'homepage' %}">
-                        <button type="submit" class="btn red-button float-right" style="width: fit-content;">Back to homepage</button>
+                        <button type="submit" class="btn red-button float-right fit-content">Back to homepage</button>
                     </a>
                 </div>
             </div>
