--- a/Castle/templates/apartments/zip_codes.html
+++ b/Castle/templates/apartments/zip_codes.html
@@ -47,7 +47,7 @@
                     </div>
 
                     <div class="item">
-                        <h4 style="margin-bottom:0"><i data-area='sudurnes' data-all="choose_all_sudurnes" id="open_sudurnes" class="fas fa-plus-square"></i> Suðurnes</h4>
+                        <h4 class="marginbottom0"><i data-area='sudurnes' data-all="choose_all_sudurnes" id="open_sudurnes" class="fas fa-plus-square"></i> Suðurnes</h4>
                         <a href="#" id="choose_all_sudurnes" data-area="sudurnes" class="zip_option sudurnes btn-secondary btn-sm">Choose all</a>
                         <p class="zip_option sudurnes"><input type="checkbox" value="230"/>  230 - Keflavík</p>
                         <p class="zip_option sudurnes"><input type="checkbox" value="232"/>  232 - Keflavík</p>
@@ -62,7 +62,7 @@
                     </div>
 
                     <div class="item">
-                        <h4 style="margin-bottom:0"><i data-area='nordurland' data-all="choose_all_nordurland" id="open_nordurland" class="fas fa-plus-square"></i> Norðurland</h4>
+                        <h4 class="marginbottom0"><i data-area='nordurland' data-all="choose_all_nordurland" id="open_nordurland" class="fas fa-plus-square"></i> Norðurland</h4>
                         <a href="#" id="choose_all_nordurland" data-area="nordurland" class="zip_option nordurland btn-secondary btn-sm">Choose all</a>
                         <p class="zip_option nordurland"><input type="checkbox" value="500"/>  500 - Staður</p>
                         <p class="zip_option nordurland"><input type="checkbox" value="510"/>  510 - Hólmavík</p>
@@ -105,7 +105,7 @@
                     </div>
 
                     <div class="item">
-                        <h4 style="margin-bottom:0"><i data-area='vestfirdir' data-all="choose_all_vestfirdir" id="open_vestfirdir" class="fas fa-plus-square"></i> Vestfirðir</h4>
+                        <h4 class="marginbottom0"><i data-area='vestfirdir' data-all="choose_all_vestfirdir" id="open_vestfirdir" class="fas fa-plus-square"></i> Vestfirðir</h4>
                         <a href="#" id="choose_all_vestfirdir" data-area="vestfirdir" class="zip_option vestfirdir btn-secondary btn-sm">Choose all</a>
                         <p class="zip_option vestfirdir"><input type="checkbox" value="400"/>  400 - Ísafjörður</p>
                         <p class="zip_option vestfirdir"><input type="checkbox" value="401"/>  401 - Ísafjörður</p>
@@ -123,7 +123,7 @@
                     </div>
 
                     <div class="item">
-                        <h4 style="margin-bottom:0"><i data-area='vesturland' data-all="choose_all_vesturland" id="open_vesturland" class="fas fa-plus-square"></i> Vesturland</h4>
+                        <h4 class="marginbottom0"><i data-area='vesturland' data-all="choose_all_vesturland" id="open_vesturland" class="fas fa-plus-square"></i> Vesturland</h4>
                         <a href="#" id="choose_all_vesturland" data-area="vesturland" class="zip_option vesturland btn-secondary btn-sm">Choose all</a>
                         <p class="zip_option vesturland"><input type="checkbox" value="300"/> 300 - Akranes</p>
                         <p class="zip_option vesturland"><input type="checkbox" value="301"/> 301 - Akranes</p>
@@ -143,7 +143,7 @@
                     </div>
 
                     <div class="item">
-                        <h4 style="margin-bottom:0"><i data-area='austurland' data-all="choose_all_austurland" id="open_austurland" class="fas fa-plus-square"></i> Austurland</h4>
+                        <h4 class="marginbottom0"><i data-area='austurland' data-all="choose_all_austurland" id="open_austurland" class="fas fa-plus-square"></i> Austurland</h4>
                         <a href="#" id="choose_all_austurland" data-area="austurland" class="zip_option austurland btn-secondary btn-sm">Choose all</a>
                         <p class="zip_option austurland"><input type="checkbox" value="685"/> 685 - Bakkafjörður</p>
                         <p class="zip_option austurland"><input type="checkbox" value="690"/> 690 - Vopnafjörður</p>
@@ -165,7 +165,7 @@
                     </div>
 
                     <div class="item">
-                        <h4 style="margin-bottom:0"><i data-area='sudurland' data-all="choose_all_sudurland" id="open_sudurland" class="fas fa-plus-square"></i> Suðurland</h4>
+                        <h4 class="marginbottom0"><i data-area='sudurland' data-all="choose_all_sudurland" id="open_sudurland" class="fas fa-plus-square"></i> Suðurland</h4>
                         <a href="#" id="choose_all_sudurland" data-area="sudurland" class="zip_option sudurland btn-secondary btn-sm">Choose all</a>
                         <p class="zip_option sudurland"><input type="checkbox" value="800"/> 800 - Selfoss</p>
                         <p class="zip_option sudurland"><input type="checkbox" value="801"/> 801 - Selfoss</p>
