--- a/Castle/templates/users/reset_password.html
+++ b/Castle/templates/users/reset_password.html
@@ -6,12 +6,12 @@
         <div class="col-sm-5 col-centered login-column red-background border-shadow">
             <div class="card border-shadow">
                 <div class="card-body">
-                    <h5 style="color:#5F1C1C; margin-bottom:2%;">Reset password</h5>
+                    <h5 class="checkspam">Reset password</h5>
                     <!-- form for resetting password -->
                     <form method="POST">
                         {% csrf_token %}
                         <table>{{ form }}</table>
-                          <div style="margin-top:0.4rem">
+                          <div class="changeDiv">
                             <button type="submit" class="btn green-button">Reset</button>
                         </div>
                     </form>
