--- a/Castle/templates/users/reset_password_confirm.html
+++ b/Castle/templates/users/reset_password_confirm.html
@@ -7,12 +7,12 @@
             <div class="card border-shadow">
                 <div class="card-body">
                     {% if validlink %}
-                    <h5 style="color:#5F1C1C; margin-bottom:2%;">Change password</h5>
+                    <h5 class="checkspam">Change password</h5>
                         <!-- form for changing password when doing a password reset-->
                         <form method="POST" class="change_password">
                             {% csrf_token %}
                             {{ form.as_p }}
-                              <div style="margin-top:0.4rem">
+                              <div class="changeDiv">
                                 <button type="submit" class="btn green-button">Change</button>
                             </div>
                         </form>
