--- a/Castle/templates/apartments/apartment_info.html
+++ b/Castle/templates/apartments/apartment_info.html
@@ -15,9 +15,9 @@
                     >
                 </div>
                 <div class="col-12 apartment_info_main_pic">
-                    <img style="height:400px;text-align:center;margin:auto" src="{{ apartment.main_pic }}" alt="apartment pic">
+                    <img class="textcenter marginauto apartment-img" src="{{ apartment.main_pic }}" alt="apartment pic">
                     {% for img in apartment.apartment_images_set.values %}
-                        <img style="height:400px" src="{{ img.image }}" alt="apartment pic" style="max-height: 500px; object-fit: contain;">
+                        <img class="apartment-img" src="{{ img.image }}" alt="apartment pic">
                     {% endfor %}
                 </div>
             </div>
@@ -42,14 +42,14 @@
         <h6>Seller: <a href="{% url 'seller_info' apartment.seller.id %}">{{ apartment.seller.user.user_info.name }}</a></h6>
         {% if not user.user_info.seller and not apartment.sold %}
         <a href="{% url 'buy_contact' apartment.id %}">
-            <button type="button" class="btn green-button float-right" style="width: fit-content">Buy this apartment</button>
+            <button type="button" class="btn green-button float-right fit-content">Buy this apartment</button>
         </a>
         {% elif apartment.sold %}
-            <h2 style="color:red">Apartment has been sold!</h2>
+            <h2 class="red-text">Apartment has been sold!</h2>
         {% endif %}
         {% if user.seller.id == apartment.seller.id %}
         <a href="{% url 'remove_apartment' apartment.id %}">
-            <button type="button" class="btn btn-danger float-right" style="width: fit-content">Remove this apartment</button>
+            <button type="button" class="btn btn-danger float-right fit-content">Remove this apartment</button>
         </a>
         {% endif %}
     </div>
