--- a/Castle/templates/apartments/apartment_list.html
+++ b/Castle/templates/apartments/apartment_list.html
@@ -30,7 +30,7 @@
                     <div class="row form-group">
                         <div class="col-6 price-range-block">
                             <div id="slider-range" class="price-filter-range" name="rangeInput"></div>
-                            <div class="apartments slide-prices-container" style="margin:0.5rem auto;text-align:center">
+                            <div class="apartments slide-prices-container textcenter">
                                 <div class="min_price d-inline-flex m-1">
                                     <span class="input-group-addon">ISK</span>
                                     <input type="text" min=0 autocomplete="off" max="199999999" onkeypress="allowNumbersOnly(event)" oninput="validity.valid||(value='20000000');" id="min_price" class="price-range-field form-control m-1" />
@@ -43,7 +43,7 @@
                         </div>
                         <div class="col-6 size-range-block">
                             <div id="size-range" class="size-filter-range" name="rangeInput"></div>
-                            <div class="apartments slide-sizes-container" style="margin:0.5rem auto;text-align:center">
+                            <div class="apartments slide-sizes-container textcenter">
                                 <div class="min_size d-inline-flex m-1">
                                     <span class="input-group-addon">SQM</span>
                                     <input type="text" min=0 autocomplete="off" max="499" onkeypress="allowNumbersOnly(event)" oninput="validity.valid||(value='40');" id="min_size" class="size-range-field form-control m-1" />
@@ -71,11 +71,11 @@
     <!-- search results header -->
     <div class="m-3 simple-border">
         <div class="row mx-2">
-            <div class="col-6" style="line-height:3">
-                <p id="apartmentsFound" style="margin:0">Apartments found: {{ apartments|length }}</p>
+            <div class="col-6 lineheight3">
+                <p id="apartmentsFound" class="margin0">Apartments found: {{ apartments|length }}</p>
             </div>
-            <div class="col-6" style="text-align:right">
-                <p id="order_by_text" for="order_by" style="display:inline-block;">Order by</p>
+            <div class="col-6 text-right">
+                <p id="order_by_text" for="order_by" class="d-inline-block">Order by</p>
                 <select name="order_by" id="order_by" class="form-control">
                     <option value="a-z" selected>Name A-Z</option>
                     <option value="z-a">Name Z-A</option>
@@ -88,7 +88,7 @@
     <!-- / results header -->
 
     <!-- hidden values to be feteched from javascript -->
-    <div class="values" style="display:none">
+    <div class="values d-none">
         <input id="min_price_django" type="text" value="{{ details.min_price }}">
         <input id="max_price_django" type="text" value="{{ details.max_price }}">
         <input id="min_size_django" type="text" value="{{ details.min_size }}">
@@ -103,7 +103,7 @@
     <!-- list of apartments -->
     <div class="row apartments-list">
     {% for apartment in apartments %}
-        <div data-address="{{ apartment.address }}" data-price="{{ apartment.price }}" class="col-md-4 col-lg-3 col-12 col-sm-6 single-apartment" style="padding:1rem">
+        <div data-address="{{ apartment.address }}" data-price="{{ apartment.price }}" class="col-md-4 col-lg-3 col-12 col-sm-6 single-apartment single-apt-padding">
             <div class="gray-background border-shadow apartment-container">
                 {% include 'apartments/single_apartment.html' with apartment=apartment %}
             </div>
