--- a/Castle/templates/users/add_apartment.html
+++ b/Castle/templates/users/add_apartment.html
@@ -6,7 +6,7 @@
         <div class="col-sm-10 col-centered login-column red-background border-shadow">
             <div class="card border-shadow">
                 <div class="card-body">
-                    <h5 style="color:#5F1C1C; margin-bottom:2%;">Add an apartment</h5>
+                    <h5 class="checkspam">Add an apartment</h5>
                     <!-- form for adding apartment -->
                     <form class="form" method="POST">
                         {% csrf_token %}
