--- a/Castle/templates/users/buyer_profile.html
+++ b/Castle/templates/users/buyer_profile.html
@@ -7,15 +7,15 @@
         <div class="card border-shadow bg-white">
             <div class="card-body">
                 <!-- image -->
-                <div class="col-md-4 col-lg-4 col-12" id="editProfilePicture" style="float:left;text-align:center">
+                <div class="col-md-4 col-lg-4 col-12 floatleft textcenter" id="editProfilePicture">
                     <div class="avatar-container">
                         {% if user.buyer.profile_pic %}
-                           <img class="profile-picture" style="width: 100%;" alt="User avatar" src="{{ user.buyer.profile_pic }}">
+                           <img class="profile-picture width100" alt="User avatar" src="{{ user.buyer.profile_pic }}">
                          <div class="middle">
                             <div class="text" onclick="window.location.href='/users/change_image'">Edit <i class="fas fa-pencil-alt"></i></div>
                         </div>
                         {% else %}
-                           <img class="profile-picture" style="width: 100%;" src="/static/images/userimagenotfound.jpg">
+                           <img class="profile-picture width100" src="/static/images/userimagenotfound.jpg">
                          <div class="middle">
                             <div class="text" onclick="window.location.href='/users/change_image'">Edit <i class="fas fa-pencil-alt"></i></div>
                         </div>
@@ -23,11 +23,11 @@
                     </div>
                 </div>
                 <!-- / image -->
-                <a class="profile-info col-md-8 col-lg-8 col-12" style="float:right;text-align:center">
+                <a class="profile-info col-md-8 col-lg-8 col-12 textcenter floatright">
                     <h3>{{ user.username }}</h3>
-                    <h5>Name: <span style="font-weight:normal">{{ info.name }}</span></h5>
-                    <h5>Phone: <span style="font-weight:normal">{{ info.phone }}</span></h5>
-                    <h5>E-mail: <span style="font-weight:normal">{{ info.email }}</span></h5>
+                    <h5>Name: <span class="font-weight-normal">{{ info.name }}</span></h5>
+                    <h5>Phone: <span class="font-weight-normal">{{ info.phone }}</span></h5>
+                    <h5>E-mail: <span class="font-weight-normal">{{ info.email }}</span></h5>
                     <br>
                     <div class="profile-button">
                         <a href="/users/edit_user"><button id="editButton" type="submit" class="btn green-button">Edit profile</button></a>
@@ -45,9 +45,9 @@
     <!-- search history -->
     <div class="w-100 p-3">
         <div class="w-100 gray-background border-shadow">
-             <div class="row" style="margin:auto !important">
+             <div class="row marginauto">
                 <div class="col-2"><h4 class="prev_arrow"><</h4></div>
-                <div class="col-8" style="text-align:center"><h5>Search history</h5></div>
+                <div class="col-8 textcenter"><h5>Search history</h5></div>
                 <div class="col-2"><h4 class="next_arrow text-right">></h4></div>
             </div>
             <div class="search-history-container container px-0 m-0">
