--- a/Castle/templates/users/change_image.html
+++ b/Castle/templates/users/change_image.html
@@ -6,12 +6,12 @@
         <div class="col-sm-5 col-centered login-column red-background border-shadow">
             <div class="card border-shadow">
                 <div class="card-body">
-                    <h5 style="color:#5F1C1C; margin-bottom:2%;">Change image</h5>
+                    <h5 class="checkspam">Change image</h5>
                     <!-- form for changing image -->
                     <form method="POST">
                         {% csrf_token %}
                         {{ form.as_p }}
-                          <div style="margin-top:0.4rem">
+                          <div class="changeDiv">
                             <button type="submit" class="green-button">Update</button>
                         </div>
                     </form>
