--- a/Castle/templates/users/edit_user.html
+++ b/Castle/templates/users/edit_user.html
@@ -6,7 +6,7 @@
         <div class="col-sm-5 col-centered login-column red-background border-shadow">
             <div class="card border-shadow">
                 <div class="card-body">
-                    <h5 style="color:#5F1C1C; margin-bottom:2%;">Edit profile</h5>
+                    <h5 class="checkspam">Edit profile</h5>
                     <!-- form for editing profile -->
                     <form method="POST">
                         {% csrf_token %}
@@ -14,7 +14,7 @@
                         {% if form2 %} <!-- basically, if user is seller, show this form. That's because seller has more fields to edit -->
                             {{ form2.as_p }}
                         {% endif %}
-                          <div style="margin-top:0.4rem">
+                          <div class="changeDiv">
                             <button type="submit" class="btn green-button">Update</button>
                         </div>
                     </form>
