--- a/Castle/templates/users/register.html
+++ b/Castle/templates/users/register.html
@@ -5,14 +5,14 @@
         <div class="col-sm-10 col-centered login-column red-background border-shadow">
             <div class="card border-shadow">
                 <div class="card-body">
-                    <h5 style="color:#5F1C1C; margin-bottom:2%;">Register new user</h5>
+                    <h5 class="checkspam">Register new user</h5>
                     <!-- form for registration -->
                     <form class="form" method="POST">
                         {% csrf_token %}
                         <table>{{ form }}</table>
                         <!-- Google Captcha -->
                         <script src='https://www.google.com/recaptcha/api.js'></script>
-                        <div style="margin:0.5rem 0rem" class="g-recaptcha" data-sitekey="6LfyraIUAAAAAA1tDGYMKxPIa1ksf3xiPN5IHoHP"></div>
+                        <div class="captcha" class="g-recaptcha" data-sitekey="6LfyraIUAAAAAA1tDGYMKxPIa1ksf3xiPN5IHoHP"></div>
 
                         <button type="submit" class="btn green-button">Register</button>
 
