--- a/Castle/templates/users/register.html
+++ b/Castle/templates/users/register.html
@@ -12,7 +12,7 @@
                         <table>{{ form }}</table>
                         <!-- Google Captcha -->
                         <script src='https://www.google.com/recaptcha/api.js'></script>
-                        <div class="captcha" class="g-recaptcha" data-sitekey="6LfyraIUAAAAAA1tDGYMKxPIa1ksf3xiPN5IHoHP"></div>
+                        <div class="g-recaptcha captcha" data-sitekey="6LfyraIUAAAAAA1tDGYMKxPIa1ksf3xiPN5IHoHP"></div>
 
                         <button type="submit" class="btn green-button">Register</button>
 
