--- a/Castle/templates/sellers/single_seller.html
+++ b/Castle/templates/sellers/single_seller.html
@@ -16,7 +16,9 @@
                 <h5><a class="seller_title" href="{{ seller.id }}">{{ seller.user.user_info.name }}</a></h5>
                 <p><strong>E-mail:</strong> {{ seller.user.user_info.email }}</p>
                 <p><strong>Phone:</strong> {{ seller.user.user_info.phone }}</p>
-                <p><strong>Address:</strong> {{ seller.address }}</p>
+                {% if seller.address %}
+                    <p><strong>Address:</strong> {{ seller.address }}</p>
+                {% endif %}
                 <a href="mailto:{{ seller.user.user_info.email }}"><button class="btn green-button">Contact</button></a>
             </div>
             {% if seller.description %}
