fix for registration form

--- a/Castle/templates/apartments/home.html
+++ b/Castle/templates/apartments/home.html
@@ -13,7 +13,7 @@
                         <!-- form for searching -->
                         <form>
                             <div class="form-group">
-                                <input autocomplete="off" type="text" class="form-control" id="search_address" placeholder="Name/address">
+                                <input autocomplete="off" type="text" class="form-control" id="search_address" placeholder="Address">
                             </div>
                             <div class="form-row">
                                 <div class="form-group col-6">
