--- a/Castle/templates/apartments/apartment_list.html
+++ b/Castle/templates/apartments/apartment_list.html
@@ -8,7 +8,7 @@
                 <form>
                     <div class="row form-group">
                         <div class="col-12 col-lg-8 col-md-8">
-                            <input value="{{ details.address }}" autocomplete="off" type="text" class="form-control" id="search_address" placeholder="Name/address">
+                            <input value="{{ details.address }}" autocomplete="off" type="text" class="form-control" id="search_address" placeholder="Address">
                         </div>
                         <div class="col-lg-2 col-md-2 col-12">
                             <select id="search_zip" class="form-control">
